--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     // code from the next step will go here
     map.on('click', function(e) {
   var features = map.queryRenderedFeatures(e.point, {
-    layers: ['new-villages-malaccapenang', 'new-villages-johore']
+    layers: ['new-villages-malaccapenang', 'new-villages-johore', 'new-villages-kedahperlis', 'new-villages-kelantantrengganu', 'new-villages-negri-sembilan', 'new-villages-pahang', 'new-villages-selangor', 'new-villages-perak']
      // replace this with the name of the layer
   });
 
