--- a/test.html
+++ b/test.html
@@ -263,7 +263,7 @@ for (i = 0; i < layers.length; i++) {
 
 });
 // toggle layers
-var toggleableLayerName = ['Black Areas', 'New Villages', 'Regrouped Kampongs', 'Labour Regroupments', 'Detention Camps']
+var toggleableLayerName = ['Black Areas', 'New Villages', 'Regrouped Malay Kampongs', 'Labour Regroupments', 'Detention Camps']
 var toggleableLayerIds = ['black-areas', 'new-villages-combined', 'regrouped-kampongs-combined', 'labour-regroupments-pahang', 'detention-centers-malaya'];
 
 for (var i = 0; i < toggleableLayerIds.length; i++) {
